kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: nsl-client

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nsl-client

  template:
    metadata:
      labels:
        app: nsl-client

    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: client
          resources:
            requests:
              memory: 1Mi
              cpu: 1m
            limits:
              memory: 500Mi
              cpu: 1000m
          image: 5h4k4r/nsl-client-with-oauth:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8888

        # Backend for Frontend
        - name: proxy
          # image: 5h4k4r/customized-oauth2-proxy:latest
          image: reg.dev.krd/common/oauth2-proxy-template:1.4.1-up.7.4.0
          imagePullPolicy: Never
          args:
            - --alpha-config=/etc/oauth2-proxy/alpha-config.yaml
          resources:
            requests:
              memory: 1Mi
              cpu: 1m
            limits:
              memory: 500Mi
              cpu: 1000m
          ports:
            - containerPort: 4180
      #     volumeMounts:
      #       - mountPath: /etc/oauth2-proxy
      #         name: proxy-config
      # volumes:
      #   - name: proxy-config
      #     configMap:
      #       name: proxy-config
