kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-svc
  labels:
    app: client
spec:
  selector:
    app: nsl-client
  ports:
    - port: 8888
      name: sws
    - port: 4180
      name: proxy
