kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: nsl.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: http-svc, port: { name: proxy } } }
          - path: /search
            pathType: Prefix
            backend: { service: { name: http-svc, port: { name: proxy } } }
